--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         <p>in mezzo alla foresta c'è una capanna</p>
         <p>dentro la capanna c'è un mostro</p>
         <p><strong>il tuo compito è uccidere il mosto</strong></p>
-        <button type="button" onclick="window.location.href='wip.html';">Next</button>
+        <button type="button" onclick="window.location.href='1.html';">Next</button>
     </body>
 </html>
