--- a/wip.html
+++ b/wip.html
@@ -16,10 +16,8 @@
                 document.removeEventListener("click", playMusic);
             });
         </script> <br>
-        <p>oh be sei arrivatə in pari con la storia, purtroppo ancora la storia è in lavoro e continuerà, ti prego un poco di pazienza</p>
-        <p>per il resto ti ringrazio per essere arrivatə fino a questo punto e ti auguro una magifica giornata, ba byeee</p>
+        <p>oh be sei arrivato in pari con la storia, purtroppo ancora la storia è in lavoro e continuerà, ti prego un poco di pazienza</p>
+        <p>per il resto ti ringrazio per essere arrivatə fino a questo punto e una magifica giornata, ba byeee</p>
         <img src="gort-capybara.gif">
     </body>
 </html>
-
-
