--- a/1.html
+++ b/1.html
@@ -22,11 +22,11 @@
         ti guardi meglio intorno e noti come nelle fitte frasche si apre un passaggio tra gli alberi, un percorso da seguire?<br>
         Non trovando motivazioni per cui non seguire il percorso e riflettendo che nonseguire il percorso potrebbe effettevamente portare alla tua morte, segui il percorso.<br>
         andando sempre e sempre avanti continui ad entrare sempre di più nel cuore della forsta, dove tutto diventa sempre più buio e...distorto?<br>
-        Noti come pian piano che vai avanti nel percorso gli alberi iniziano a contorcersi e assume forme assurde, sicuramente non un buon presaggio, inizia a domendarti se seguire il percorso è stat una buona idea, magari se andavi dalla parte opposta riuscivi ad uscire da questa foresta.<br>
+        Noti come pian piano che vai avanti nel percorso gli alberi iniziano a contorcersi e assume forme assurde, sicuramente non un buon presaggio, inizia a domendarti se seguire il percorso è stata una buona idea, magari se andavi dalla parte opposta riuscivi ad uscire da questa foresta.<br>
         Ti guardi indietro e non è ancora troppo tardi, potresti ancora fare retromarcia e provare ad uscire, ma una piccola parte della tua testa ti fa ricordare il tuo obbiettivo, al centro della forsta c'è una capanna e nella capanna c'è un mostro, devi uccidere il mostro.<br>
         Che fare?<br>
         Proseguire o tornare indietro?</p>
-        <button type="button" onclick="window.location.href='wip.html';">Proseguo</button>
+        <button type="button" onclick="window.location.href='2.html';">Proseguo</button>
         <button type="button" onclick="window.location.href='wip.html';">Torno indietro</button>
     </body>
 </html>
