--- a/1.html
+++ b/1.html
@@ -26,8 +26,9 @@
         Ti guardi indietro e non è ancora troppo tardi, potresti ancora fare retromarcia e provare ad uscire, ma una piccola parte della tua testa ti fa ricordare il tuo obbiettivo, al centro della forsta c'è una capanna e nella capanna c'è un mostro, devi uccidere il mostro.<br>
         Che fare?<br>
         Proseguire o tornare indietro?</p>
-        <button type="button" onclick="window.location.href='prova.html';">Proseguo</button>
+        <button type="button" onclick="window.location.href='proseguo.html';">Proseguo</button>
         <button type="button" onclick="window.location.href='wip.html';">Torno indietro</button>
     </body>
 </html>
+
 
