--- a/proseguo.html
+++ b/proseguo.html
@@ -29,11 +29,11 @@
         <p style="font-family: cursive">
             "una stroria lontana di una foresta perduta<br>
             un eroe sperduto e una stroria sconosciuta<br>
-            l'eco lontano di anime pure guideranno la sua strada
-            e demoni scuri bloccheranno la via
-            destra sinistra e infine in alto
-            questa è la via per raggiungere il posto
-            oh eroe raggiungerai la vetta?
+            l'eco lontano di anime pure guideranno la sua strada<br>
+            e demoni scuri bloccheranno la via<br>
+            destra sinistra e infine in alto<br>
+            questa è la via per raggiungere il posto<br>
+            oh eroe raggiungerai la vetta?<br>
             quando sarà il destino ti apsettà"<br></p>
         <p>"...rassicurante" l'unica cosa che riesci a dire, si non era tanto rassicurante "anime pure? demoni oscuri?
         no signori io non sono un eroe" o almeno così credi, effettivamente sei sperdutə e la tua storia è sconosciuta, che sia tu l'eroe?<br>
@@ -49,4 +49,5 @@
         <button type="button" onclick="window.location.href='wip.html';">Sinista</button>
     </body>
 </html>
+
 
