--- a/proseguo.html
+++ b/proseguo.html
@@ -34,7 +34,7 @@
             destra sinistra e infine in alto<br>
             questa è la via per raggiungere il posto<br>
             oh eroe raggiungerai la vetta?<br>
-            quando sarà il destino ti apsettà"<br></p>
+            quando sarà il destino ti aspetta"<br></p>
         <p>"...rassicurante" l'unica cosa che riesci a dire, si non era tanto rassicurante "anime pure? demoni oscuri?
         no signori io non sono un eroe" o almeno così credi, effettivamente sei sperdutə e la tua storia è sconosciuta, che sia tu l'eroe?<br>
         Non lo sai effettivamente, e tornare indietro non è più un opzione, non ti rimane che proseguire<br>
@@ -49,5 +49,6 @@
         <button type="button" onclick="window.location.href='wip.html';">Sinista</button>
     </body>
 </html>
+
 
 
